--- a/backoffice/composer.json
+++ b/backoffice/composer.json
@@ -6,6 +6,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "fzaninotto/faker": "^1.8",
+        "jms/serializer": "^2.0",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "4.1.*",
         "symfony/console": "4.1.*",
