--- a/backoffice/.env
+++ b/backoffice/.env
@@ -23,3 +23,6 @@ DATABASE_URL=mysql://admin:admin@127.0.0.1:3306/speedyquizz
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
+###< nelmio/cors-bundle ###
