--- a/backoffice/.env
+++ b/backoffice/.env
@@ -14,7 +14,8 @@ APP_SECRET=9678f45ae4bdd7093a6a14063240d3e5
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://admin:admin@127.0.0.1:3306/speedyquizz
+# DATABASE_URL=mysql://admin:admin@127.0.0.1:3306/speedyquizz
+DATABASE_URL=mysql://admin:admin@localhost:3306/speedyquizz
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
