--- a/backoffice/composer.json
+++ b/backoffice/composer.json
@@ -8,6 +8,7 @@
         "easycorp/easyadmin-bundle": "^1.17",
         "fzaninotto/faker": "^1.8",
         "jms/serializer": "^2.0",
+        "lexik/jwt-authentication-bundle": "^2.6",
         "nelmio/cors-bundle": "^1.5",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "4.1.*",
