I love token - JWS token generation OK

--- a/backoffice/.env
+++ b/backoffice/.env
@@ -28,8 +28,10 @@ MAILER_URL=null://localhost
 CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
 ###< nelmio/cors-bundle ###
 
+
 ###> lexik/jwt-authentication-bundle ###
-JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
-JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_SECRET_KEY=%kernel.root_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.root_dir%/config/jwt/public.pem
 JWT_PASSPHRASE=08cece5c69425f0246350d6d0d8712db
 ###< lexik/jwt-authentication-bundle ###
+
