--- a/backoffice/config/services.yaml
+++ b/backoffice/config/services.yaml
@@ -26,6 +26,11 @@ services:
     App\Controller\:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
-
+    
+    Lexik\Bundle\JWTAuthenticationBundle\Event\JWTDecodedEvent:
+        autowire: true
+        synthetic: true
+        public: true
+        
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
