--- a/frontoffice/package.json
+++ b/frontoffice/package.json
@@ -52,9 +52,11 @@
     "prop-types": "*",
     "react": "*",
     "react-countdown-now": "^1.3.0",
+    "react-css-transition": "^0.7.4",
     "react-dom": "*",
     "react-redux": "*",
     "react-router-dom": "^4.3.1",
+    "react-spinners": "^0.4.7",
     "redux": "*"
   }
 }
